made changes suggested by FindBugs